--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.48.5",
+    "password-generator": "^2.2.0",
     "react-test-renderer": "16.6.3",
     "rnpm-plugin-windows": "^0.2.8"
   },
