Fixed Codepush and first release

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "WKOLernplattform",
-  "displayName": "WKOLernplattform"
+  "name": "OVB Learning",
+  "displayName": "OVB Learning"
 }
