--- a/android/.project
+++ b/android/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WKOLernplattform</name>
+	<name>OVB Learning</name>
 	<comment>Project android created by Buildship.</comment>
 	<projects>
 	</projects>
