--- a/android/app/bin/src/main/AndroidManifest.xml
+++ b/android/app/bin/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.wkolernplattform">
+    package="com.seekinnovation.ovb_learning">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
