--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,3 +16,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+MYAPP_RELEASE_STORE_FILE=ovb-learning-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=ovb-learning
+MYAPP_RELEASE_STORE_PASSWORD=OVB1d23c93qi9ru
+MYAPP_RELEASE_KEY_PASSWORD=OVB1d23c93qi9ru
