--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WKOLernplattform",
+  "name": "OVBLearning",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "appcenter": "1.13.0",
+    "appcenter-analytics": "1.13.0",
+    "appcenter-crashes": "1.13.0",
     "babel-plugin-transform-decorators": "^6.24.1",
     "core": "file:./core",
     "firebase": "^5.7.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
-    "react-native-code-push": "^5.5.2",
     "react-native-fontawesome": "^6.0.1",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-modalbox": "^1.6.0",
