Module and section learning implemented
Some UI button links added

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "appcenter-analytics": "1.13.0",
     "appcenter-crashes": "1.13.0",
     "babel-plugin-transform-decorators": "^6.24.1",
-    "core": "file:./core",
+    "core": "file:core",
     "firebase": "^5.7.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
@@ -23,7 +23,7 @@
     "react-native-progress": "^3.5.0",
     "react-native-progress-circle": "^2.0.1",
     "react-native-router-flux": "^4.0.6",
-    "react-native-windows": "^0.57.0-rc.5",
+    "react-native-windows": "^0.57.1",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
+    "babel-preset-env": "^1.7.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.48.5",
     "password-generator": "^2.2.0",
