--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.57.8",
     "react-native-fontawesome": "^6.0.1",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-modalbox": "^1.6.0",
     "react-native-popup-menu": "^0.14.2",
     "react-native-progress": "^3.5.0",
@@ -36,6 +37,7 @@
     "metro-react-native-babel-preset": "0.48.5",
     "password-generator": "^2.2.0",
     "react-test-renderer": "16.6.3",
+    "replace-in-file": "^3.4.4",
     "rnpm-plugin-windows": "^0.2.8"
   },
   "jest": {
