--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-pdf')
+    compile project(':rn-fetch-blob')
     compile project(':appcenter-crashes')
     compile project(':appcenter-analytics')
     compile project(':appcenter')
