--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "react-native-gesture-handler": "^1.1.0",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-modalbox": "^1.6.0",
+    "react-native-pdf": "^5.0.12",
     "react-native-popup-menu": "^0.14.2",
     "react-native-progress": "^3.5.0",
     "react-native-progress-circle": "^2.0.1",
     "react-native-router-flux": "^4.0.6",
-    "react-native-windows": "^0.57.1",
     "react-navigation": "^3.6.1",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
@@ -37,6 +37,7 @@
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.48.5",
     "password-generator": "^2.2.0",
+    "react-native-windows": "^0.57.1",
     "react-test-renderer": "16.6.3",
     "replace-in-file": "^3.4.4",
     "rnpm-plugin-windows": "^0.2.8"
