--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,8 +101,8 @@ android {
         applicationId "com.seekinnovation.ovb_learning"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 6
-        versionName "1.0.3-r"
+        versionCode 7
+        versionName "1.1"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
