--- a/ios/OVBLearning/Info.plist
+++ b/ios/OVBLearning/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.1</string>
+	<string>1.1.3</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
@@ -39,8 +39,14 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We dont need it. Its because of an library.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We dont need it. Its because of an library.</string>
+	<key>NSLocationUsageDescription</key>
+	<string>We dont need it. Its because of an library.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>We dont need it. Its because of an library.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
