--- a/ios/OVBLearning/AppCenter-Config.plist
+++ b/ios/OVBLearning/AppCenter-Config.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
   <dict>
-    <key>AppSecret</key>
+    <key>de4798b8-0f0b-4268-ae4f-bf41b7ab0065</key>
     <string/>
   </dict>
 </plist>
