--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^5.0.3",
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-code-push": "^5.6.0",
     "react-native-fontawesome": "^6.0.1",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-keyboard-spacer": "^0.4.1",
