--- a/ios/OVBLearning/Info.plist
+++ b/ios/OVBLearning/Info.plist
@@ -23,7 +23,7 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>CodePushDeploymentKey</key>
-	<string>deployment-key-here</string>
+	<string>6XWLEj1_xjArZr-dN5iYlYbxxe3UHki9xYzkr</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
